k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: prod
  annotations:
    # Utilisez Let's Encrypt ou votre fournisseur de certificats
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - wordpress.poei-storm.com
    secretName: poei-tls-secret
  rules:
  - host: wordpress.poei-storm.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: wordpress
            port:
              number: 80
